# GYO-Engine

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/editor/: main.cpp
apps/runtime/: main.cpp
config/: engine.json
config/engine/: asset_catalog.json
engine/: CMakeLists.txt
engine/include/engine/asset/: AssetCatalog.hpp  AssetError.hpp  AssetHandle.hpp  AssetId.hpp  AssetManager.hpp  AssetRequest.hpp  AssetState.hpp  AssetType.hpp
engine/include/engine/asset/catalog/: CatalogEntry.hpp  CatalogFormat.hpp  CatalogParser.hpp
engine/include/engine/asset/core/: AnyAsset.hpp  AssetCachePolicy.hpp  AssetLifetime.hpp  AssetRecord.hpp  AssetStatistics.hpp  AssetStorage.hpp
engine/include/engine/asset/detail/: Hash.hpp  Result.hpp  Span.hpp  TypeId.hpp
engine/include/engine/asset/hot_reload/: AssetChange.hpp  AssetWatcher.hpp
engine/include/engine/asset/loaders/: BinaryLoader.hpp  FontLoader.hpp  SoundLoader.hpp  TextLoader.hpp  TextureLoader.hpp
engine/include/engine/asset/loading/: AssetPipeline.hpp  IAssetLoader.hpp  IAssetSource.hpp  LoadContext.hpp  LoaderRegistry.hpp
engine/include/engine/asset/resolver/: AssetPathResolver.hpp
engine/include/engine/base/: Span.hpp
engine/include/engine/io/: IoError.hpp  IoFwd.hpp
engine/include/engine/io/fs/: DirectoryEntry.hpp  DirectoryIterator.hpp  FileInfo.hpp  FileSystemCapabilities.hpp  IFileSystem.hpp  IFileWatcher.hpp  MountPoint.hpp  MountTable.hpp  Vfs.hpp
engine/include/engine/io/helpers/: FileAllCommon.hpp  ReadAllBytes.hpp  ReadAllText.hpp  WriteAllBytes.hpp  WriteAllText.hpp
engine/include/engine/io/path/: Path.hpp  PathUtils.hpp  Uri.hpp
engine/include/engine/io/stream/: BufferedStream.hpp  FileOpenMode.hpp  IStream.hpp  MemoryStream.hpp  Seek.hpp  SpanStream.hpp  StreamReader.hpp  StreamWriter.hpp
engine/src/asset/: AssetCatalog.cpp  AssetManager.cpp  AssetPathResolver.cpp  AssetPipeline.cpp  AssetWatcher.cpp  LoaderRegistry.cpp
engine/src/asset/catalog/: CatalogParser.cpp
engine/src/asset/loaders/: BinaryLoader.cpp  FontLoader.cpp  SoundLoader.cpp  TextLoader.cpp  TextureLoader.cpp
engine/src/io/fs/: DirectoryIterator.cpp  MountTable.cpp  Vfs.cpp
engine/src/io/helpers/: ReadAllBytes.cpp  ReadAllText.cpp  WriteAllBytes.cpp  WriteAllText.cpp
engine/src/io/path/: PathUtils.cpp  Uri.cpp
engine/src/io/stream/: BufferedStream.cpp  MemoryStream.cpp  SpanStream.cpp  StreamReader.cpp  StreamWriter.cpp
tests/: CMakeLists.txt
tests/engine_tests/: CMakeLists.txt
tests/engine_tests/asset/: AssetCatalogTests.cpp  AssetManagerTests.cpp  AssetPathResolverTests.cpp  AssetWatcherTests.cpp  CatalogParserTests.cpp
